--- a/Surrogate/View/ControllerView/ModuleView/ConnectionsHandlerView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/ConnectionsHandlerView.xaml
@@ -3,15 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:base="clr-namespace:Surrogate.View">
-    <StackPanel DockPanel.Dock="Right" Margin="5">
+    <StackPanel DockPanel.Dock="Right" Margin="0">
         <StackPanel.Resources>
             <Style TargetType="ListViewItem">
                 <Setter Property="FontSize" Value="20"/>
                 <Setter Property="FontWeight" Value="Bold"/>
             </Style>
         </StackPanel.Resources>
-        <Label Content="Verbindungsstatus"/>
-        <ListView x:Name="lvConnections">
+        <ListView x:Name="lvConnections" Background="Transparent">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_MouseDoubleClick" />
@@ -27,27 +26,29 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <StackPanel  Width="150" MaxHeight="50" Grid.Column="0" Grid.Row="0" Orientation="Horizontal" >
-                              <StackPanel.Resources>
+                            <StackPanel.Resources>
                                 <Style TargetType="StackPanel">
                                     <Style.Triggers>
                                         <DataTrigger Binding="{Binding Status}" Value="Ready">
-                                            <Setter Property="Background" Value="Green"/>
+                                            <Setter Property="Background" Value="#009900"/>
                                         </DataTrigger>
                                         <DataTrigger Binding="{Binding Status}" Value="Disconnected">
-                                            <Setter Property="Background" Value="Red"/>
+                                            <Setter Property="Background" Value="#8c8c8c"/>
                                         </DataTrigger>
                                         <DataTrigger Binding="{Binding Status}" Value="Connected">
-                                            <Setter Property="Background" Value="Yellow"/>
+                                            <Setter Property="Background" Value="#ffdd99"/>
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
                             </StackPanel.Resources>
-                            <TextBlock VerticalAlignment="Center" Text="{Binding Name}" FontWeight="ExtraBlack" TextWrapping="Wrap" Padding="10"/>
+                            <TextBlock VerticalAlignment="Center" Text="{Binding Name}" TextWrapping="Wrap" Padding="10"/>
                         </StackPanel>
                     </Grid>
 
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <Button x:Name="btnUpdateAll" HorizontalAlignment="Center" VerticalAlignment="Center" Click="OnBtnUpdateAllClicked" Cursor="Hand" Content="Alle Aktualisieren" Style="{StaticResource LinkButton}">
+        </Button>
     </StackPanel>
 </base:ModuleViewBase>
