--- a/Surrogate/View/ControllerView/ModuleView/LineFollowingModuleView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/LineFollowingModuleView.xaml
@@ -8,7 +8,7 @@
         xmlns:base="clr-namespace:Surrogate.View">
     <StackPanel>
         <Grid>
-           <!-- <Grid.RowDefinitions>
+           <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
@@ -18,16 +18,17 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions> 
-            <Image Grid.Column="0" Grid.Row="0" x:Name="imView0" Width="200" Height="200"></Image>
-            <Image Grid.Column="1" Grid.Row="0" x:Name="imView1" Width="200" Height="200"></Image>
-            <Image Grid.Column="2" Grid.Row="0" x:Name="imView2" Width="200" Height="200"></Image>
-            <Image Grid.Column="0" Grid.Row="1" x:Name="imView3" Width="200" Height="200"></Image>
-            <Image Grid.Column="1" Grid.Row="1" x:Name="imView4" Width="200" Height="200"></Image>-->
-            <Image x:Name="imView5" Width="500" Height="500"></Image>
+            <Image Grid.Column="0" Grid.Row="0" x:Name="imView0" Width="200" Height="100"></Image>
+            <Image Grid.Column="1" Grid.Row="0" x:Name="imView1" Width="200" Height="100"></Image>
+            <Image Grid.Column="2" Grid.Row="0" x:Name="imView2" Width="200" Height="100"></Image>
+            <Image Grid.Column="0" Grid.Row="1" x:Name="imView3" Width="200" Height="100"></Image>
+            <Image Grid.Column="1" Grid.Row="1" x:Name="imView4" Width="200" Height="100"></Image>
+            <Image Grid.Column="2" Grid.Row="2" x:Name="imView5" Width="300" Height="300"></Image>
             
         </Grid>
         
-        <Button x:Name="btnStart" Height="20" Click="OnStartPressed">Linie folgen starten</Button>
-        <Button x:Name="btnHsvView" Height="20" Click="Button_Click">Hsv Eigenschaften einstellen</Button>
+        <Button x:Name="btnStart" Style="{StaticResource LinkButton}" Height="20" Click="OnStartPressed">Linie folgen starten</Button>
+        <Button x:Name="btnHsvView" Style="{StaticResource LinkButton}" Height="20" Click="OnHSVViewPressed">Hsv Eigenschaften einstellen</Button>
+        <Button x:Name="btnChangeCam" Style="{StaticResource LinkButton}" Height="20" Click="BtnChangeCam_Click">Kamera wechseln</Button>
     </StackPanel>
 </base:ModuleViewBase>
