Little Changes ins Modules/Properties

--- a/Surrogate/View/ControllerView/ModuleView/HsvPickerView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/HsvPickerView.xaml
@@ -4,8 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Surrogate.View"
-        mc:Ignorable="d"
-        Height="800" Width="800">
+        mc:Ignorable="d">
     <StackPanel Orientation="Horizontal">
         <Image Height="500" Width="500" x:Name="imView"></Image>
         <StackPanel>
