--- a/Surrogate/View/ControllerView/ModuleView/StartModuleView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/StartModuleView.xaml
@@ -15,6 +15,6 @@
                     FontSize="20" FontStyle="Oblique" FontWeight="Heavy" Text="Surrogate Application Framework"/>
         <TextBlock Grid.Column="0" Grid.Row="1"
                    FontSize="15"
-                   TextWrapping="Wrap">Willkomen im Surrogate Programm Framework. Wählen Sie das gewünschte Modul aus der Liste am Rand.</TextBlock>
+                   TextWrapping="Wrap"><Run Text="Willkomen im Surrogate Programm Framework. Wählen Sie das gewünschte Modul aus der Liste am"/><Run Text=" linken"/><Run Text=" Rand."/></TextBlock>
     </Grid>
 </base:ModuleViewBase>
